@@ -1,3 +1,6 @@
+* Document anonymous rules.
+  Produce well-chosen (predictable) names for anonymous rules.
+
 * ErrorReporting: experiment with merging several symbols
   so as to reduce the noise (e.g. operators, expressions,
   etc.). Or just print the same way, but don't quotient
