@@ -1,3 +1,9 @@
+2015/02/11:
+Added support for anonymous rules. This allows writing, e.g.,
+list(e = expression SEMI { e })
+whereas previously one should have written
+list(terminated(e, SEMI)).
+
 2015/02/09:
 Moved all of the demos to ocamlbuild (instead of make).
 
